@@ -4,6 +4,8 @@ Revision history for Perl extension Net::SSLeay.
   - On OpenVMS, detect vendor SSL111 product based on OpenSSL 1.1.x.
   - Cast the return value of OCSP_SINGLERESP_get0_id to fix a
     const/non-const mismatch warning that broke the build on OpenVMS.
+	- Create SSL_CTXs with Test::Net::SSLeay's new_ctx() function for tests that
+	  are broken with LibreSSL 3.2. Partially fixes GH-232.
 
 1.91_01 2021-10-24
 	- Correct X509_STORE_CTX_init() return value to integer. Previous
